--- a/src/app/newsmodule/newsmodule.component.html
+++ b/src/app/newsmodule/newsmodule.component.html
@@ -1,122 +1,12 @@
 
 <!-- /homeblock1-->
-<section class="w3l-homeblock1 py-sm-5 py-4">
-    <div class="container py-md-4">
-        <div class="grids-area-hny main-cont-wthree-fea row">
-            <div class="col-lg-3 col-6 grids-feature">
-                <a href="beauty.html">
-                    <div class="area-box">
-                        <span class="fa fa-bath"></span>
-                        <h4 class="title-head">Beauty</h4>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-6 grids-feature">
-                <a href="fashion.html">
-                    <div class="area-box">
-                        <span class="fa fa-female"></span>
-                        <h4 class="title-head">Fashion and style</h4>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-6 grids-feature mt-lg-0 mt-md-4 mt-3">
-                <a href="#food">
-                    <div class="area-box">
-                        <span class="fa fa-cutlery"></span>
-                        <h4 class="title-head">Food and wellness</h4>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-6 grids-feature mt-lg-0 mt-md-4 mt-3">
-                <a href="#lifsetyle">
-                    <div class="area-box">
-                        <span class="fa fa-pie-chart"></span>
-                        <h4 class="title-head">Lifestyle</h4>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</section>
+<homeblock></homeblock>
 <!-- //homeblock1-->
 
 <section class="w3l-testimonials" id="testimonials">
 
     <!-- main-slider -->
     <slider></slider>
-
-              <!-- <div class="owl-testimonial  owl-theme mb-md-0 mb-sm-5 mb-4">
-                
-                <div class="item">
-                    <div class="row slider-info">
-                        <div class="col-lg-8 message-info align-self">
-                            <span class="label-blue mb-sm-4 mb-3">Beauty</span>
-                            <h3 class="title-big mb-4">Create an Art that shows the beauty in everyone’s ideas of flaws.
-                            </h3>
-                            <p class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-                                sit id accusantium officia quod quasi necessitatibus perspiciatis Harum error
-                                provident quibusdam tenetur. Ut fermentum leo quis sapienet faucibus, at
-                                scelerisque sem feugiat. Nulla in eros purus.</p>
-                        </div>
-                        <div class="col-lg-4 col-md-8 img-circle mt-lg-0 mt-4">
-                            <img src="assets/images/beauty.jpg" class="img-fluid radius-image-full" alt="client image">
-                        </div>
-                    </div>
-                </div>src
-                <div class="item">
-                    <div class="row slider-info">
-                        <div class="col-lg-8 message-info align-self">
-                            <span class="label-blue mb-sm-4 mb-3">Fashion and Style</span>
-                            <h3 class="title-big mb-4">Addicted to Fashion is the Armor to survive the reality of
-                                Everyday Life.
-                            </h3>
-                            <p class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-                                sit id accusantium officia quod quasi necessitatibus perspiciatis Harum error
-                                provident quibusdam tenetur. Ut fermentum leo quis sapienet faucibus, at
-                                scelerisque sem feugiat. Nulla in eros purus.</p>
-                        </div>
-                        <div class="col-lg-4 col-md-8 img-circle mt-lg-0 mt-4">
-                            <img src="assets/images/fashion.jpg" class="img-fluid radius-image-full" alt="client image">
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="row slider-info">
-                        <div class="col-lg-8 message-info align-self">
-                            <span class="label-blue mb-sm-4 mb-3">Food and Wellness</span>
-                            <h3 class="title-big mb-4">Create healthy habits, not restrictions. Wellness is a taste of
-                                being.
-                            </h3>
-                            <p class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-                                sit id accusantium officia quod quasi necessitatibus perspiciatis Harum error
-                                provident quibusdam tenetur. Ut fermentum leo quis sapienet faucibus, at
-                                scelerisque sem feugiat. Nulla in eros purus.</p>
-                        </div>
-                        <div class="col-lg-4 col-md-8 img-circle mt-lg-0 mt-4">
-                            <img src="assets/images/food.jpg" class="img-fluid radius-image-full" alt="client image">
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="row slider-info">
-                        <div class="col-lg-8 message-info align-self">
-                            <span class="label-blue mb-sm-4 mb-3">Lifestyle</span>
-                            <h3 class="title-big mb-4">To succeed in Life, you need 3 things : a wishbone, a backbone, a
-                                funny bone.
-                            </h3>
-                            <p class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-                                sit id accusantium officia quod quasi necessitatibus perspiciatis Harum error
-                                provident quibusdam tenetur. Ut fermentum leo quis sapienet faucibus, at
-                                scelerisque sem feugiat. Nulla in eros purus.</p>
-                        </div>
-                        <div class="col-lg-4 col-md-8 img-circle mt-lg-0 mt-4">
-                            <img src="assets/images/lifestyle.jpg" class="img-fluid radius-image-full"
-                                alt="client image">
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-    <!-- /main-slider -->
 
 <div class="w3l-homeblock2 py-5">
     <div class="container py-lg-5 py-md-4">
@@ -144,7 +34,7 @@
                                     <img src="assets/images/a1.jpg" alt="" class="img-fluid rounded-circle" />
                                     <ul class="blog-meta">
                                         <li>
-                                            <a href="author.html">Isabella ava</a> 
+                                            <a href="author.html">Isabella ava</a>
                                         </li>
                                         <li class="meta-item blog-lesson">
                                             <span class="meta-value"> July 13, 2020 </span>. <span
@@ -242,7 +132,7 @@
                             <img src="assets/images/a1.jpg" alt="" class="img-fluid rounded-circle" />
                             <ul class="blog-meta">
                                 <li>
-                                    <a href="author.html">Isabella ava</a> 
+                                    <a href="author.html">Isabella ava</a>
                                 </li>
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> July 13, 2020 </span>. <span
@@ -262,7 +152,7 @@
                             <img src="assets/images/a2.jpg" alt="" class="img-fluid rounded-circle" />
                             <ul class="blog-meta">
                                 <li>
-                                    <a href="author.html">Charlotte mia</a> 
+                                    <a href="author.html">Charlotte mia</a>
                                 </li>
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> July 13, 2020 </span>. <span
@@ -319,7 +209,7 @@
                             <img src="assets/images/a1.jpg" alt="" class="img-fluid rounded-circle" />
                             <ul class="blog-meta">
                                 <li>
-                                    <a href="author.html">Isabella ava</a> 
+                                    <a href="author.html">Isabella ava</a>
                                 </li>
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> July 13, 2020 </span>. <span
@@ -345,7 +235,7 @@
                             <img src="assets/images/a2.jpg" alt="" class="img-fluid rounded-circle" />
                             <ul class="blog-meta">
                                 <li>
-                                    <a href="author.html">Charlotte mia</a> 
+                                    <a href="author.html">Charlotte mia</a>
                                 </li>
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> July 13, 2020 </span>. <span
@@ -371,7 +261,7 @@
                             <img src="assets/images/a3.jpg" alt="" class="img-fluid rounded-circle" />
                             <ul class="blog-meta">
                                 <li>
-                                    <a href="author.html">Elizabeth</a> 
+                                    <a href="author.html">Elizabeth</a>
                                 </li>
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> July 13, 2020 </span>. <span
@@ -409,7 +299,7 @@
                                 <img src="assets/images/a1.jpg" alt="" class="img-fluid rounded-circle" />
                                 <ul class="blog-meta">
                                     <li>
-                                        <a href="author.html">Isabella ava</a> 
+                                        <a href="author.html">Isabella ava</a>
                                     </li>
                                     <li class="meta-item blog-lesson">
                                         <span class="meta-value"> July 13, 2020 </span>. <span
@@ -465,7 +355,7 @@
                                 <img src="assets/images/a3.jpg" alt="" class="img-fluid rounded-circle" />
                                 <ul class="blog-meta">
                                     <li>
-                                        <a href="author.html">Elizabeth</a> 
+                                        <a href="author.html">Elizabeth</a>
                                     </li>
                                     <li class="meta-item blog-lesson">
                                         <span class="meta-value"> July 13, 2020 </span>. <span
@@ -492,7 +382,7 @@
                                 <img src="assets/images/a1.jpg" alt="" class="img-fluid rounded-circle" />
                                 <ul class="blog-meta">
                                     <li>
-                                        <a href="author.html">Isabella ava</a> 
+                                        <a href="author.html">Isabella ava</a>
                                     </li>
                                     <li class="meta-item blog-lesson">
                                         <span class="meta-value"> July 13, 2020 </span>. <span
@@ -531,7 +421,7 @@
                                 <img src="assets/images/a2.jpg" alt="" class="img-fluid rounded-circle" />
                                 <ul class="blog-meta">
                                     <li>
-                                        <a href="author.html">Charlotte mia</a> 
+                                        <a href="author.html">Charlotte mia</a>
                                     </li>
                                     <li class="meta-item blog-lesson">
                                         <span class="meta-value"> July 13, 2020 </span>. <span
@@ -561,7 +451,7 @@
                                 <img src="assets/images/a3.jpg" alt="" class="img-fluid rounded-circle" />
                                 <ul class="blog-meta">
                                     <li>
-                                        <a href="author.html">ELizabeth</a> 
+                                        <a href="author.html">ELizabeth</a>
                                     </li>
                                     <li class="meta-item blog-lesson">
                                         <span class="meta-value"> July 13, 2020 </span>. <span
@@ -642,8 +532,6 @@
   <button onclick="topFunction()" id="movetop" title="Go to top">
     <span class="fa fa-angle-up"></span>
   </button>
-  
+
   <!-- /move top -->
 </section>
-=======
->>>>>>> 741c917c756ebe880d1399890b4b0890bae9f74d
