--- a/src/app/newsmodule/homeblockcategory/homeblockcategory.component.html
+++ b/src/app/newsmodule/homeblockcategory/homeblockcategory.component.html
@@ -1,9 +1,10 @@
-<!-- <div class="col-lg-3 col-6 grids-feature"> -->
-    <div>
-    <a href="beauty.html">
+<!-- <div class="col-lg-3 col-6 grids-feature"> --> 
+     <div>
+    <a>
       <div class="area-box">
-        <span class="fa fa-bath"></span>
+        <img width="20%" height="10%" [src]="img">
+        
         <h4 class="title-head">{{category}}</h4>
       </div>
     </a>
-  </div>
+  </div> 
