--- a/src/app/newsmodule/newsmodule.component.html
+++ b/src/app/newsmodule/newsmodule.component.html
@@ -1,12 +1,11 @@
 
-<!-- /homeblock1-->
 <homeblock></homeblock>
-<!-- //homeblock1-->
 
 <section class="w3l-testimonials" id="testimonials">
 
     <!-- main-slider -->
     <slider></slider>
+      <!-- end of main-slider -->
 
 <div class="w3l-homeblock2 py-5">
     <div class="container py-lg-5 py-md-4">
