--- a/src/app/newsmodule/slider/slider.component.html
+++ b/src/app/newsmodule/slider/slider.component.html
@@ -38,7 +38,7 @@
                                             <h2 class="h3 post-title text-white my-1">{{x.title}}</h2>
                                         </a>
                                         <!-- meta title -->
-                                        <div class="news-meta">
+                                        <div class="news-meta mb-5">
                                             <span class="news-author">by <a class="text-white font-weight-bold" >{{x.author}}</a></span>
                                             <span class="news-date">{{x.publishedAt}}</span>
                                         </div>
