--- a/src/app/newsmodule/newssection/newssection.component.html
+++ b/src/app/newsmodule/newssection/newssection.component.html
@@ -20,212 +20,27 @@
         <div class="col-12 md-6 pb-0 pb-md-3 pt-2 pr-md-1">
          <slider></slider>
         </div>
-        <!--End slider news-->
-
-        <!--Start box news-->
-        <div class="col-12 md-6 pb-0 pb-md-3 pt-2 pr-md-1">
-          <div class="row">
-
-            <newsbox class="col-3 pb-1 pt-0 pr-1"></newsbox>
-
-            <!--news box-->
-            <newsbox class="col-3 pb-1 pl-1 pt-0"></newsbox>
-            <!--news box-->
-
-            <newsbox class="col-3 pb-1 pr-1 pt-1"></newsbox>
-
-            <!--news box-->
-            <newsbox class="col-3 pb-1 pl-1 pt-1"></newsbox>
-
-          </div>
-
-
-        </div>
 
           <p class="text-center">
             <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false"
-                    aria-controls="multiCollapseExample1 multiCollapseExample2 multiCollapseExample3 multiCollapseExample4">
+                    aria-controls="multiCollapseExample1">
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrows-expand" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 8ZM7.646.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 1.707V5.5a.5.5 0 0 1-1 0V1.707L6.354 2.854a.5.5 0 1 1-.708-.708l2-2ZM8 10a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 14.293V10.5A.5.5 0 0 1 8 10Z"/>
               </svg>
             </button>
           </p>
 
-        <div class="row">
 
-
-          <div class="col">
             <div class="collapse multi-collapse" id="multiCollapseExample1">
-
-              <div class="card card-body">
-                <newsbox class=" pb-1 pt-0 pr-1"></newsbox>
-                <div class="position-relative p-2 p-lg-3 b-0 w-100 bg-shadow">
-                  <!-- category -->
-                  <a class="p-1 badge badge-primary rounded-0" href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Lifestyle</a>
-
-                  <!--title-->
-                  <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                    <h2 class="h5 text-black my-1">Should you see the Fantastic Beasts sequel?</h2>
-                  </a>
-                </div>
-              </div>
-
-
-              <div class="card card-body">
-                <newsbox class=" pb-1 pl-1 pt-0"></newsbox>
-                <div class="position-relative p-2 p-lg-3 b-0 w-100 bg-shadow">
-                  <!-- category -->
-                  <a class="p-1 badge badge-primary rounded-0" href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Lifestyle</a>
-
-                  <!--title-->
-                  <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                    <h2 class="h5 text-black my-1">Should you see the Fantastic Beasts sequel?</h2>
-                  </a>
-                </div>
-              </div>
-
-
-              <div class="card card-body">
-                <newsbox class=" pb-1 pr-1 pt-1"></newsbox>
-                <div class="position-relative p-2 p-lg-3 b-0 w-100 bg-shadow">
-                  <!-- category -->
-                  <a class="p-1 badge badge-primary rounded-0" href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Lifestyle</a>
-
-                  <!--title-->
-                  <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                    <h2 class="h5 text-black my-1">Should you see the Fantastic Beasts sequel?</h2>
-                  </a>
-                </div>
-              </div>
-
-
-              <div class="card card-body">
-                <newsbox class=" pb-1 pl-1 pt-1"></newsbox>
-                <div class="position-relative p-2 p-lg-3 b-0 w-100 bg-shadow">
-                  <!-- category -->
-                  <a class="p-1 badge badge-primary rounded-0" href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Lifestyle</a>
-
-                  <!--title-->
-                  <a href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
-                    <h2 class="h5 text-black my-1">Should you see the Fantastic Beasts sequel?</h2>
-                  </a>
-                </div>
-              </div>
-
-
-              <!--news box-->
-
-              <!--news box-->
-
-
-              <!--news box-->
-            </div>
-          </div>
-
-
-
-
-          <div class="col">
-            <div class="collapse multi-collapse" id="multiCollapseExample2">
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-              <newsbox class="col-3 pb-1 pt-0 pr-1"></newsbox>
-
-              <!--news box-->
-              <newsbox class="col-3 pb-1 pl-1 pt-0"></newsbox>
-              <!--news box-->
-
-              <newsbox class="col-3 pb-1 pr-1 pt-1"></newsbox>
-
-              <!--news box-->
-              <newsbox class="col-3 pb-1 pl-1 pt-1"></newsbox>
+              <app-news-expanded></app-news-expanded>
 
             </div>
-          </div>
 
-
-
-
-
-
-          <div class="col">
-            <div class="collapse multi-collapse" id="multiCollapseExample3">
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-<!--              <div class="card card-body">-->
-<!--                Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--              </div>-->
-
-              <newsbox class="col-3 pb-1 pt-0 pr-1"></newsbox>
-
-              <!--news box-->
-              <newsbox class="col-3 pb-1 pl-1 pt-0"></newsbox>
-              <!--news box-->
-
-              <newsbox class="col-3 pb-1 pr-1 pt-1"></newsbox>
-
-              <!--news box-->
-              <newsbox class="col-3 pb-1 pl-1 pt-1"></newsbox>
-            </div>
-          </div>
-
-
-            <div class="col">
-              <div class="collapse multi-collapse" id="multiCollapseExample4">
-<!--                <div class="card card-body">-->
-<!--                  Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--                </div>-->
-<!--                <div class="card card-body">-->
-<!--                  Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--                </div>-->
-<!--                <div class="card card-body">-->
-<!--                  Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--                </div>-->
-<!--                <div class="card card-body">-->
-<!--                  Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.-->
-<!--                </div>-->
-
-                <newsbox class="col-3 pb-1 pt-0 pr-1"></newsbox>
-
-                <!--news box-->
-                <newsbox class="col-3 pb-1 pl-1 pt-0"></newsbox>
-                <!--news box-->
-
-                <newsbox class="col-3 pb-1 pr-1 pt-1"></newsbox>
-
-                <!--news box-->
-                <newsbox class="col-3 pb-1 pl-1 pt-1"></newsbox>
-              </div>
-            </div>
-        </div>
         <!--End box news-->
       </section>
       <!--END SECTION-->
     </div>
   </div>
-  <!--end code-->
 
-  <div class="row mb-4">
-    <div class="col-12 text-center">
-      <!--            <p>Design by Ari Budin <a target="_blank" href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">Bootstrap.News</a> | images by pixabay and pexels</p>-->
-    </div>
-  </div>
 </div>
 </section>
