update about us

--- a/src/app/newsmodule/newssection/newssection.component.html
+++ b/src/app/newsmodule/newssection/newssection.component.html
@@ -17,7 +17,7 @@
       <section class="col">
         <!--Start slider news-->
 
-        <div class="col-12 md-6 pb-0 pb-md-3 pt-2 pr-md-1">
+        <div class="col-12 md-6 pb-0 pb-md-3 pt-2 pr-md-1 mb-5">
          <slider></slider>
         </div>
 
