--- a/src/app/newsmodule/slider/slider.component.css
+++ b/src/app/newsmodule/slider/slider.component.css
@@ -25,3 +25,11 @@
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
+.img1 {
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed !important;
+    background-size: cover !important;   
+    background-position: center !important;
+   }
