--- a/src/app/newsmodule/homeblock/homeblock.component.html
+++ b/src/app/newsmodule/homeblock/homeblock.component.html
@@ -16,7 +16,7 @@
 <section class="w3l-homeblock1 py-sm-5 py-4">
   <div class="container py-md-4">
       <div class="grids-area-hny main-cont-wthree-fea row">
-        <homeblockcategory *ngFor="let obj of homeBlockCM"  [category]="obj.category_name" [img]="obj.img" class="col-lg-3 col-6 grids-feature"></homeblockcategory>
+        <homeblockcategory *ngFor="let obj of homeBlockCM"  [category]="obj.category_name" [img]="obj.img" class="col-lg-3 col-6 mb-5 grids-feature"></homeblockcategory>
        
 
           <!-- <div class="col-lg-3 col-6 grids-feature">
