--- a/src/app/newsmodule/homeblockcategory/homeblockcategory.component.html
+++ b/src/app/newsmodule/homeblockcategory/homeblockcategory.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="col-lg-3 col-6 grids-feature"> --> 
-     <div>
+     <div [routerLink]="['news',category]">
     <a>
       <div class="area-box">
         <img width="20%" height="10%" [src]="img">
