--- a/src/app/newsmodule/newsmodule.component.html
+++ b/src/app/newsmodule/newsmodule.component.html
@@ -1,3 +1,6 @@
+<div class="row w-100 h-100 align-item-center justify-content-center me-5 mb-5">
+    <app-backgroundvideo></app-backgroundvideo>
+</div>
 
 <homeblock></homeblock>
 
@@ -516,4 +519,7 @@
   </button>
 
   <!-- /move top -->
+</section>
+<section class="bg-gray">
+    <about-us></about-us>
 </section>
