--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
 
-html, body { height: 100%; }
+html, body { height: 100%;
+    overflow-x: hidden;
+ }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
