--- a/src/app/newsmodule/backgroundvideo/backgroundvideo.component.html
+++ b/src/app/newsmodule/backgroundvideo/backgroundvideo.component.html
@@ -1,2 +1,9 @@
 
-<iframe src="https://player.vimeo.com/video/137857207" class="m-5 w-100 h-100" title="Vimeo video" allowfullscreen></iframe>
+  <!-- <div class="hero">
+  <video autoplay loop muted plays-inline fullscreen>
+     <source src="https://dkw8gemxc9npb.cloudfront.net/videos/fa8c6582-1d3d-4dc0-bb9c-cf11c8803881/enewsblogandjour.mp4" type="video/mp4">
+  </video>
+</div> -->
+<section class="video-container">
+  <video src="https://dkw8gemxc9npb.cloudfront.net/videos/fa8c6582-1d3d-4dc0-bb9c-cf11c8803881/enewsblogandjour.mp4" autoplay loop playsinline muted></video>
+</section>
