--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,26 +1,35 @@
-<section class="container col-12 mb-5 mt-5">
 
-    <section class="row justify-content-between">
+    <!-- <section class="row justify-content-between">
         <section class="col-md-5 col-12">
 
             <div class="w3l-homeblock2  w3l-homeblock5 py-5">
-                <div class="container pt-md-4 pb-md-5">
+                <div class="container pt-md-4 pb-md-5"> -->
                     <!-- block -->
-                    <h3 class="category-title mb-3"> Who We Are</h3>
+                    <!-- <h3 class="category-title mb-3"> Who We Are</h3>
                     <p class="mb-sm-5 mb-4 max-width">News Blog was established by 3 developers called <em>Ali Mourad</em>,<em> Amena Khalife</em>, and <em> Mohammad Zeineddine</em>  in the very end of 2022.</p>
                     </div>
             
             </div>
 
-        </section>
+        </section> -->
 
-        <section class="col-md-5 col-12 mb-5">
+        <section class="col-md-5 col-12 mb-5" class="img-container" >
             <div class=" bg-image container-fluid">
                 <img class="w-100 h-100 " src="/assets/img/about-us-img.jpg" />
+                
+     <section class="row justify-content-between">
+        <section class="col-md-5 col-12">
+
+            <div class="">
+                <div class="">
+                   
+                     <h3 class="content"> Who We Are</h3>
+                    <p class="content">News Blog was established by 3 developers called <em>Ali Mourad</em>,<em> Amena Khalife</em>, and <em> Mohammad Zeineddine</em>  in the very end of 2022.</p>
+                    </div>
+            
             </div>
+
+        </section> 
         </section>
 
-    </section>
-
-</section>
 
