--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -12,24 +12,20 @@
             </div>
 
         </section> -->
-
-        <section class="col-md-5 col-12 mb-5" class="img-container" >
-            <div class=" bg-image container-fluid">
-                <img class="w-100 h-100 " src="/assets/img/about-us-img.jpg" />
+        <h1 style="text-align: center;"> About Us</h1>
+        <section class="col-md-9 col-12 mb-5" class="img-containe border">
+              <div class=" center">
+                <img class="floatimg" src="/assets/img/lollipop1.jpg" />
                 
      <section class="row justify-content-between">
-        <section class="col-md-5 col-12">
+        <section class="col-md-9 col-12">
 
             <div class="">
-                <div class="">
-                   
-                     <h3 class="content"> Who We Are</h3>
-                    <p class="content">News Blog was established by 3 developers called <em>Ali Mourad</em>,<em> Amena Khalife</em>, and <em> Mohammad Zeineddine</em>  in the very end of 2022.</p>
+                <div>
+                     <h3 class="content" style=" color: black ;" > Welcome to News Blog ! We are a team of dedicated developers,<strong> Ali Mourad, Amena Khalife and Mohammad Zeineddine </strong>, who are passionate about bringing you the latest and most accurate news from different sources. We work hard to bring you timely, well-researched articles on a wide range of topics. From politics to sports to entertainment and everything in between, we strive to provide a balanced and unbiased perspective on the stories that matter most.</h3>
+                    <p class="content" style=" color: black;" >Thank you for visiting News Blog ! We hope you enjoy reading our articles as much as we enjoy sharing them.</p>
                     </div>
             
-            </div>
-
+            </div>              
         </section> 
         </section>
-
-
