--- a/src/app/newsmodule/backgroundvideo/backgroundvideo.component.html
+++ b/src/app/newsmodule/backgroundvideo/backgroundvideo.component.html
@@ -4,6 +4,7 @@
      <source src="https://dkw8gemxc9npb.cloudfront.net/videos/fa8c6582-1d3d-4dc0-bb9c-cf11c8803881/enewsblogandjour.mp4" type="video/mp4">
   </video>
 </div> -->
+
 <section class="video-container">
-  <video src="https://dkw8gemxc9npb.cloudfront.net/videos/fa8c6582-1d3d-4dc0-bb9c-cf11c8803881/enewsblogandjour.mp4" autoplay loop playsinline muted></video>
+  <video src="assets/video/bg.mp4" autoplay loop playsinline muted></video>
 </section>
