--- a/src/app/newsmodule/homeblock/homeblock.component.html
+++ b/src/app/newsmodule/homeblock/homeblock.component.html
@@ -1,7 +1,7 @@
 <section class="w3l-homeblock1 py-sm-5 py-4">
   <div class="container py-md-4">
     <div class="grids-area-hny main-cont-wthree-fea row">
-         <homeblockcategory *ngFor="let obj of homeBlockCM"  [category]="obj.category_name" [img]="obj.img" class="col-lg-3 col-6 mb-5 grids-feature"></homeblockcategory>
+         <homeblockcategory *ngFor="let obj of category" [id]="obj.id" [category]="obj.name" [img]="obj.img_url" class="col-lg-3 col-6 mb-5 grids-feature"></homeblockcategory>
     </div>
   </div>
 </section>
