--- a/src/app/newsmodule/news-expanded/news-expanded.component.html
+++ b/src/app/newsmodule/news-expanded/news-expanded.component.html
@@ -1,5 +1,5 @@
 <section class="container my-5 d-flex justify-content-center align-items-center gap-3 flex-wrap">
   <div class="position-relative col-md-2 col-12" *ngFor="let n of newsWithCategory">
-      <newsbox [name]="n.name" [category]="n.category" ></newsbox>
+      <!-- <newsbox [name]="n.name" [category]="n.category" ></newsbox> -->
   </div>
 </section>
