--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -13,9 +13,9 @@
 
         </section> -->
         <h1 style="text-align: center;"> About Us</h1>
-        <section class="col-md-9 col-12 mb-5" class="img-containe border">
+        <section class="col-md-9 col-12 mb-5" class="img-container border">
               <div class=" center">
-                <img class="floatimg" src="/assets/img/lollipop1.jpg" />
+                <img class="floating" src="/assets/images/brain.jpeg" />
                 
      <section class="row justify-content-between">
         <section class="col-md-9 col-12">
