--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,23 +34,26 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
-					<li class="nav-item dropdown @@pages__active">
+					<li class="nav-item active">
+						<a class="nav-link" routerLink="/login">Login</a>
+					</li>
+					<!-- <li class="nav-item dropdown @@pages__active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							More <span class="fa fa-angle-down"></span>
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						</a> -->
+						<!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item @@b__active" href="beauty.html">Beauty</a>
 							<a class="dropdown-item @@fa__active" href="fashion.html">Fashion & Style</a>
 						</div>
-					</li>
+					 </li> -->
 					<li class="nav-item @@contact__active">
-						<a class="nav-link" href="contact.html">About Us</a>
+						<a class="nav-link" routerLink="/about-us">About Us</a>
 					</li>
 				</ul>
 			</div>
 			<!-- toggle switch for light and dark theme -->
-			<div class="mobile-position">
+			<!-- <div class="mobile-position">
 				<nav class="navigation">
 					<div class="theme-switch-wrapper">
 						<label class="theme-switch" for="checkbox">
@@ -63,7 +66,8 @@
 					</div>
 				</nav>
 			</div>
-			<!-- //toggle switch for light and dark theme -->
+
+			<theme-switcher></theme-switcher> -->
 		<!-- </div> -->
 	<!-- </nav> -->
 	<!--//nav-->
