--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -44,6 +44,11 @@
 							<a class="dropdown-item @@fa__active" href="fashion.html">Fashion & Style</a>
 						</div>
 					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" routerLink="news/new">Add News</a>
+					</li>
+
 					<li class="nav-item @@contact__active">
 						<a class="nav-link" href="contact.html">About Us</a>
 					</li>
